feature/ agora com um click risca

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -16,17 +16,17 @@
     <form>
         <div class="conteiner">
             <h2 style="text-align: center;">Lista de Tarefas</h2>
-            <input type="text" id="tarefa" required>
+            <input type="text" id="tarefa">
             <button id="blt" type="submit">Cadastrar</button>
         </div>
     </form>
-    <Table>
-        <ul>
-            
-        </ul>
-    </Table>
+    <table>
+        <ol></ol>
+    </table>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="/script.js"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="./script.js"></script>
+
 
 </html>
